Bug fixed for getting user list using reactive code.